--- a/MyApplication2/app/src/main/res/navigation/main_graph.xml
+++ b/MyApplication2/app/src/main/res/navigation/main_graph.xml
@@ -22,9 +22,7 @@
         <action
             android:id="@+id/action_mainFragment_to_profileFragment"
             app:destination="@id/profileFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:popUpTo="@id/mainFragment"
-            app:popUpToInclusive="true" />
+            app:enterAnim="@anim/nav_default_enter_anim" />
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
@@ -53,9 +51,7 @@
             android:id="@+id/action_favoriteFragment_to_coolPictureFragment"
             app:destination="@id/coolPictureFragment"
             app:enterAnim="@android:anim/slide_in_left"
-            app:popEnterAnim="@android:anim/slide_in_left"
-            app:popUpTo="@id/favoriteFragment"
-            app:popUpToInclusive="true" />
+            app:popEnterAnim="@android:anim/slide_in_left" />
     </fragment>
     <fragment
         android:id="@+id/friendsFragment"
@@ -76,8 +72,6 @@
             android:id="@+id/action_coolPictureFragment_to_favoriteFragment"
             app:destination="@id/favoriteFragment"
             app:enterAnim="@android:anim/slide_in_left"
-            app:popEnterAnim="@android:anim/slide_in_left"
-            app:popUpTo="@id/favoriteFragment"
-            app:popUpToInclusive="false" />
+            app:popEnterAnim="@android:anim/slide_in_left" />
     </fragment>
 </navigation>
