hw3 was finished

--- a/MyApplication2/app/src/main/res/layout/fragment_favorite.xml
+++ b/MyApplication2/app/src/main/res/layout/fragment_favorite.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FavoriteFragment">
+    tools:context=".fragments.FavoriteFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_message"
@@ -19,7 +19,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etMessage"
-            android:fontFamily="@font/font_playwrite_ng_modern"
+            style="@style/AppText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text" />
