--- a/MyApplication2/app/src/main/res/layout/fragment_cool_picture.xml
+++ b/MyApplication2/app/src/main/res/layout/fragment_cool_picture.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CoolPictureFragment">
+    tools:context=".fragments.CoolPictureFragment">
 
     <TextView
         android:id="@+id/tvMessage"
@@ -14,10 +14,10 @@
         android:text="empty"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.121" />
+        app:layout_constraintVertical_bias="0.2" />
 
     <ImageView
         android:id="@+id/imageView"
