--- a/MyApplication2/app/src/main/res/layout/fragment_registration.xml
+++ b/MyApplication2/app/src/main/res/layout/fragment_registration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegistrationFragment">
+    tools:context=".fragments.RegistrationFragment">
 
 
     <com.google.android.material.textfield.TextInputLayout
@@ -20,7 +20,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etEmail"
-            android:fontFamily="@font/font_playwrite_ng_modern"
+            style="@style/AppText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text" />
